fix(navbar): Logo alignment in some browsers #2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
             Ajuda
           </div>
         </a>
-        <a href="#"><img src="assets/img/logo-querobolsa.svg" alt="Logo Quero Bolsa" /></a>
+        <img src="assets/img/logo-querobolsa.svg" alt="Logo Quero Bolsa" />
         <a href="#">
           <div class="topnav__right">
             <fa-icon [icon]="faUserCircle"></fa-icon>
