--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -8,7 +8,8 @@ $text-black: #1F2D30
 $background-grey: #FBFBFB
 $modal-overlay: #1F2D30E0 // #1F2D30 opacity 88%
 
-// @media (max-width: 576px)
+$md: 768px
+$lg: 992px
 $border-grey: 1px solid lightgrey
 
 %flex-between
@@ -19,6 +20,8 @@ $border-grey: 1px solid lightgrey
   align-items: center
   display: flex
   flex-direction: column
+  @media only screen and (min-width: $md)
+    flex-direction: row
 
 .header-footer
   display: flex
@@ -30,26 +33,84 @@ $border-grey: 1px solid lightgrey
   @extend %flex-between
   a
     color: $secondary-blue
+    display: flex
+    flex: 1
     font-size: 12px
     font-weight: bold
     margin: 10px 0 10px 0
     text-decoration: none
+    @media only screen and (min-width: $md)
+      height: 50px
     fa-icon
       font-size: 20px
     div
       @extend %topnav__item
-    .topnav__left
+    .topnav__left-help
       border-right: $border-grey
-      padding: 0 15px
-    .topnav__right
+      height: 100%
+      padding: 0 18px
+      @media only screen and (min-width: $lg)
+        padding: 0 18px 0 80px
+      .topnav__left-help__how
+        display: none
+        @media only screen and (min-width: $md)
+          display: flex
+          margin-left: 5px
+      .topnav__left-help__help
+        @media only screen and (min-width: $md)
+          display: none
+    .topnav__left-message
+      display: none
+      @media only screen and (min-width: $md)
+        display: flex
+        flex-direction: row
+        fa-icon
+          color: $green
+          margin-left: 18px
+          font-size: 25px
+        .topnav__left-message__phone
+          align-items: center
+          display: flex
+          flex-direction: column
+          justify-content: flex-start
+          margin-left: 6px
+          p
+            width: 100%
+          .topnav__left-message__phone-number
+            font-size: 14px
+            margin: 3px 0
+          .topnav__left-message__phone-message
+            font-size: 10px
+            margin: 3px 0
+  .topnav__right
+    justify-content: flex-end
+    .topnav__right-profile
       border-left: $border-grey
-      padding: 0 15px
+      padding: 0 18px
+      @media only screen and (min-width: $md)
+        border-left: none
+      @media only screen and (min-width: $lg)
+        padding: 0 80px 0 18px
+      .topnav__right-profile__account
+        @media only screen and (min-width: $md)
+          display: none
+      .topnav__right-profile__name
+        display: none
+        @media only screen and (min-width: $md)
+          display: flex
+          margin-right: 8px
   img
     @extend %topnav__item
     align-self: center
+    flex: 1
     height: 35px
     padding: 0
     margin: 10px 0 10px 0
+    max-width: 100px
+    @media only screen and (min-width: $md)
+      height: 45px
+      margin: 0
+      max-width: 110px
 
 .topmenu
   @extend %flex-between
