--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,8 +35,7 @@
             </div>
           </button>
           <div class="dropdown__content">
-            <a href="#">Pré-matrícula</a>
-            <a href="#">Bolsas favoritas</a>
+            <a *ngFor="let dropdownItem of dropdownItems" href="#">{{dropdownItem}}</a>
           </div>
         </div>
       </div>
