--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -118,6 +118,28 @@ $border-grey: 1px solid lightgrey
   color: #FFF
   font-weight: bold
   padding: 0 15px
+  @media only screen and (min-width: $md)
+    padding: 5px 15px
+  p
+    @media only screen and (min-width: $md)
+      align-items: center
+      display: flex
+      padding: 0 5px
+      margin: 0 5px
+  .topmenu__nav
+    display: flex
+    .topmenu__nav-items
+      display: none
+      @media only screen and (min-width: $md)
+        display: flex
+        margin-left: 30px
+      .topmenu__nav-item
+        align-items: center
+        color: #FFF
+        display: flex
+        font-size: 14px
+        padding: 5px 20px
+        text-decoration: none
   .dropdown
     position: relative
     display: inline-block
@@ -148,6 +170,8 @@ $border-grey: 1px solid lightgrey
         display: block
         padding: 12px 16px
         text-decoration: none
+    @media only screen and (min-width: $md)
+      display: none
 
   .dropdown:hover .dropdown__content
     display: block
