--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -8,6 +8,24 @@ $text-black: #1F2D30
 $background-grey: #FBFBFB
 $modal-overlay: #1F2D30 // opacity 88%
 
+$md: 768px
+$lg: 992px
+
+%flex-row
+  display: flex
+  flex-direction: row
+
+app-input-select
+  display: flex
+  flex-direction: column
+  margin-bottom: 20px
+
+app-breadcrumb
+  display: none
+  @media only screen and (min-width: $md)
+    display: flex
+    margin: 20px 0 30px 0
+
 .home-container
   align-items: flex-start
   display: flex
@@ -21,6 +39,9 @@ $modal-overlay: #1F2D30 // opacity 88%
     color: $text-black
     margin: 0 0 10px 0
     padding: 0
+    @media only screen and (min-width: $md)
+      font-size: 12px
+      margin: 5px 0 20px 0
   app-scholarship-favorite
     width: 100%
   fa-icon
@@ -54,6 +75,8 @@ $modal-overlay: #1F2D30 // opacity 88%
     font-weight: bold
     margin: 15px 0
     text-decoration: none
+    @media only screen and (min-width: $md)
+      display: none
 
   .btn-group
     margin: 10px 0
@@ -78,18 +101,9 @@ $modal-overlay: #1F2D30 // opacity 88%
       border-radius: 0 0 5px 5px
       border-top: none
 
-app-input-select
-  display: flex
-  flex-direction: column
-  margin-bottom: 20px
-
 .label-title
   font-size: 14px
   font-weight: bold
-
-%flex-row
-  display: flex
-  flex-direction: row
 
 .study-modality
   @extend %flex-row
