--- a/src/app/shared/button/button.component.html
+++ b/src/app/shared/button/button.component.html
@@ -1,2 +1,2 @@
-<button [ngStyle]="{padding: padding}" [class]="'button ' + colorClass" [ngClass]="{ disabled: this.disabled }"
-  (click)="clicked()">{{label}}</button>
+<button [ngStyle]="{padding: padding, width: width, 'font-size': size}" [class]="'button ' + colorClass"
+  [ngClass]="{ disabled: this.disabled }" (click)="clicked()">{{label}}</button>
