--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -30,8 +30,10 @@ app-breadcrumb
   align-items: flex-start
   display: flex
   flex-direction: column
-  margin: 0 15px
+  margin: 0 18px
   padding-bottom: 100px
+  @media only screen and (min-width: $md)
+    margin: 0 80px
   h2
     color: $text-black
     margin: 5px 0
@@ -42,11 +44,20 @@ app-breadcrumb
     @media only screen and (min-width: $md)
       font-size: 12px
       margin: 5px 0 20px 0
+  app-input-button-group
+    @media only screen and (min-width: $md)
+      margin-bottom: 20px
+      width: 100%
   app-scholarship-favorite
-    width: 100%
+    margin: 0
+    padding: 0
   fa-icon
     margin-right: 5px
 
+  .scholarship__container
+    @media only screen and (min-width: $md)
+      display: flex
+      flex-wrap: wrap
   .add-scholarship
     align-items: center
     box-shadow: 0 3px 10px 0 lightgrey
@@ -57,17 +68,31 @@ app-breadcrumb
     padding: 10px 0
     text-align: center
     width: 100%
+    @media only screen and (min-width: $md)
+      display: flex
+      height: 420px
+      justify-content: center
+      margin: 0 0 0 20px
+      width: 250px
     .add-scholarship__items
       width: 50%
+      @media only screen and (min-width: $md)
+        width: 70%
       div
         color: $main-blue
         font-size: 60px
         padding: 10px
+        @media only screen and (min-width: $md)
+          font-size: 50px
       h3
         margin: 5px
         padding: 0
+        @media only screen and (min-width: $md)
+          font-size: 14px
       p
         font-size: 12px
+        @media only screen and (min-width: $md)
+          font-size: 10px
 
   .back-button
     color: $secondary-blue
@@ -77,29 +102,6 @@ app-breadcrumb
     text-decoration: none
     @media only screen and (min-width: $md)
       display: none
-
-  .btn-group
-    margin: 10px 0
-    button
-      background-color: transparent
-      border: 1px solid $secondary-blue
-      color: $secondary-blue
-      cursor: pointer
-      font-weight: bold
-      padding: 10px 0
-      width: 100%
-    button:hover
-      background-color: $secondary-blue
-      color: #FFF
-    .button__active
-      background-color: $secondary-blue
-      color: #FFF
-    .btn-group--first
-      border-bottom: none
-      border-radius: 5px 5px 0 0
-    .btn-group--last
-      border-radius: 0 0 5px 5px
-      border-top: none
 
 .label-title
   font-size: 14px
