feat(home): Filter favorites by semester #24

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,8 +22,8 @@
         <p>Clique para adicionar bolsas de cursos do seu interesse</p>
       </div>
     </div>
-    <app-scholarship-favorite *ngFor="let favorite of this.scholarshipsFavorites; let i = index" [key]="'favorites'+i"
-      [value]="favorite" (changeInput)="deleteScholarship($event)">
+    <app-scholarship-favorite *ngFor="let favorite of this.scholarshipsFavoritesFiltered; let i = index"
+      [key]="'favorites'+i" [value]="favorite" (changeInput)="deleteScholarship($event)">
     </app-scholarship-favorite>
   </div>
 </div>
