--- a/src/app/shared/inputs/input-range/input-range.component.html
+++ b/src/app/shared/inputs/input-range/input-range.component.html
@@ -1,6 +1,6 @@
 <div class="slidecontainer">
   <label *ngIf="label">{{label}}</label>
-  <p *ngIf="showValue">{{prefixValue}}{{value | number:'':'es'}}{{sufixValue}}</p>
-  <input type="range" [min]="minRange" [max]="maxRange" [(ngModel)]="value" (ngModelChange)="modelChanged($event)"
-    class="slider">
+  <p *ngIf="showValue">{{prefixValue}}{{this.inputControl.value | number:'':'es'}}{{sufixValue}}</p>
+  <input type="range" [min]="minRange" [max]="maxRange" [formControl]="inputControl"
+    (ngModelChange)="modelChanged($event)" class="slider">
 </div>
