formatando uns textos
KKKKKKKKKKKKKKKKKKKKKKKKKKKKKKK VO MATA O PU RECUÉST

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="home-container">
   <a href="#" class="back-button">
     <fa-icon [icon]="faChevronLeft"></fa-icon>
-    Minha conta
+    Minha Conta
   </a>
   <app-breadcrumb [form]="formBreadcrumb" key="breadcrumb"></app-breadcrumb>
-  <h2>Bolsas favoritas</h2>
+  <h2>Bolsas Favoritas</h2>
   <p>
     Adicione bolsas de cursos e faculdades do seu interesse e receba atualizações
     com as melhores ofertas disponíveis.
@@ -18,7 +18,7 @@
         <div>
           <fa-icon [icon]="faPlusCircle"></fa-icon>
         </div>
-        <h3>Adicionar bolsa</h3>
+        <h3>Adicionar Bolsa</h3>
         <p>Clique para adicionar bolsas de cursos do seu interesse</p>
       </div>
     </div>
